--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ width: 100%;
 
 #time{
   text-align: center;
-  width: 30%;
+  width: 100px;
   margin: 20px auto 30px;
   font-size: 40px;
   background-color: rgba(255, 255, 255, 0.557) ;
