--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
  width: 100%;
  height: 100%;
  object-fit: cover;
+ margin: 0;
+ padding: 0;
 }
 
 body {
@@ -47,7 +49,7 @@ width: 100%;
 
 #lieu{
     width: 60%;
-    height: 40px;
+    height: 50px;
     background-color:rgba(255, 255, 255, 0.3);
     border-radius: 5px;
     font-weight: bold;
