--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
+ position: fixed;
 }
 
 #time{
@@ -68,6 +69,9 @@ width: 100%;
     border-radius: 5px;
     border: 0;
     margin-left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -76,7 +80,6 @@ width: 100%;
 }
 
 .icon-find{
-    font-weight:900;
     font-size: 25px;
     border: 0ch;
     color: black;
