--- a/style.css
+++ b/style.css
@@ -105,14 +105,17 @@ width: 100%;
     font-weight:500;
     text-align: center;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    width: 60%;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     margin: 50px auto 0;
-    border-radius: 20px;
+    border-radius: 50%;
     padding: 0;
     display: flex;
     justify-content: center;
-    color: rgba(255, 255, 255, 0.85);
+    color: rgba(251, 251, 251, 0.85);
+    -webkit-text-stroke: 0px black;
+    background-color:rgba(0, 0, 0, 0);
+
 }
 
 #icon_temp{
